--- a/config-k8s-mongodb-with-express/mongodb.yaml
+++ b/config-k8s-mongodb-with-express/mongodb.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo:4.x
+        image: mongo
         ports: 
         - containerPort: 27017
         env:
@@ -24,12 +24,12 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongodb-root-username
+              key: mongo-root-username
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: mongodb-secret
-              key: mongodb-root-password 
+              key: mongo-root-password 
 
 ---
 apiVersion: v1
